<resources>
    <string name="app_name">OurAniList</string>
    <string name="password_label">Ingrese contraseña</string>
    <string name="username_label">Nombre de usuario</string>
    <string name="login_button_text">Ingresar</string>
    <string name="full_name_label">Nombre completo</string>
    <string name="email_label">Correo electrónico</string>
    <string name="retry_password_label">Repetir contraseña</string>
    <string name="login_sign_up_button_text">Registro</string>
    <string name="logout_text">Cerrar sesión</string>
    <string name="previous_button_text">Anterior</string>
    <string name="next_button_text">Siguiente</string>
    <string name="synopsis_label">Sinópsis</string>
</resources>